feat: add employee console
